# guanggaoji

./: .gitignore
docs/: gui_guider_ui_handoff.md
packaging/: openwrt-lv-projector-nor-resource.patch
src/: Makefile  lv_conf.h  lv_drv_conf.h  lv_pro_launcher.c  lv_pro_launcher.h  main.c
src/AWCast/: awcast.c  awcast.h  cedarx_player_dlna.c  iscrctl_draw.h  lv_pro_awcast_activity.c  lv_pro_dlna_activity.c
src/AWCast/include/ut/: CMakeLists.txt  Makefile.am  ut_wfdplayer.cpp  ut_wfdplayer.h
src/Bluetooth/: lv_pro_bt_activity.c  lv_pro_bt_activity.h  lv_pro_bt_common.c  lv_pro_bt_common.h  lv_pro_bt_conn_activity.c  lv_pro_bt_conn_activity.h  lv_pro_res_bt.c  lv_pro_res_bt.h
src/Embedded/: emb_audio.c  emb_audio.h  emb_cast.c  emb_cast.h  emb_core.c  emb_core.h  emb_device.c  emb_device.h  emb_display.c  emb_display.h  emb_event.c  emb_event.h  emb_key.c  emb_key.h  emb_network.c  emb_network.h  emb_photo.c  emb_photo.h  emb_remote.c  emb_remote.h  emb_source.c  emb_source.h  emb_storage.c  emb_storage.h  emb_time.c  emb_time.h  emb_types.h  emb_update.c  emb_update.h  emb_video.c  emb_video.h  emb_weather.c  emb_weather.h
src/Factory_test/: factory_bt.c  factory_common.c  factory_hdmi.c  factory_media.c  factory_test.c  factory_test.h  factory_wifi.c
src/Media/: lv_pro_media.c  lv_pro_media.h  lv_pro_media_layout.h
src/Network/: README_IMAGE_DIR_PATCH.txt  README_POWERLOSS_SAFE.txt  README_patch.txt  README_v12_sn_file.txt  README_v5.txt  README_v6.txt  README_v7.txt  lv_pro_connect_wifi_activity.c  lv_pro_connect_wifi_activity.h  lv_pro_mqtt_slideshow_activity.c  lv_pro_mqtt_slideshow_activity.h  lv_pro_mqtt_slideshow_config.h  lv_pro_mqtt_slideshow_factory_sn.c  lv_pro_mqtt_slideshow_factory_sn.h  lv_pro_mqtt_slideshow_http.c  lv_pro_mqtt_slideshow_http.h  lv_pro_mqtt_slideshow_mqtt.c  lv_pro_mqtt_slideshow_mqtt.h  lv_pro_mqtt_slideshow_net.c  lv_pro_mqtt_slideshow_net.h  lv_pro_mqtt_slideshow_store.c  lv_pro_mqtt_slideshow_store.h  lv_pro_mqtt_slideshow_worker.c  lv_pro_mqtt_slideshow_worker.h  lv_pro_res_wifi.c  lv_pro_res_wifi.h  lv_pro_selectbox_wifi.c  lv_pro_selectbox_wifi.h  lv_pro_wifi_activity.c  lv_pro_wifi_activity.h  lv_pro_wifi_common.c  lv_pro_wifi_common.h
src/NewUI/: lv_pro_new_ui.c  lv_pro_new_ui.h  (+1 more)
(+294 files in other folders)
